--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-This is practice project.
-This is an addition to the newly created branch.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    This is the test for second-test branch
+</body>
+</html>
