javascript file will show today's date

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    This is the test for second-test branch
+    <p>This is the test for second-test branch</p>
+    <p id="dateDisplay"></p>
+    <script src="JS/index.js"></script>
 </body>
 </html>
